[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/TextBox.gd" type="Script" id=1]
[ext_resource path="res://Resources/Graphics/Menu/Textbox.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/dialog.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Music/Text Box.mp3" type="AudioStream" id=4]
[ext_resource path="res://Resources/Shaders/OneBit.tres" type="Shader" id=5]
[ext_resource path="res://Resources/Fonts/AtlantisInternational-jen0.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Resources/Sounds/Appear.wav" type="AudioStream" id=7]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )

[node name="TextBox" type="Node2D"]
script = ExtResource( 1 )

[node name="TextBox" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.1, 0.1 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="TextBox"]
material = SubResource( 3 )
margin_left = 140.0
margin_top = 230.0
margin_right = 4240.0
margin_bottom = 2055.0
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Test"
valign = 1

[node name="NameLabel" type="RichTextLabel" parent="TextBox"]
material = SubResource( 4 )
margin_left = 140.0
margin_top = 150.0
margin_right = 2605.0
margin_bottom = 345.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
custom_colors/default_color = Color( 0.117647, 0.266667, 0.345098, 1 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[b]Person:[/b]"
text = "Person:"

[node name="ShowTextTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.02

[node name="AppearPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SoundEffects"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[connection signal="timeout" from="ShowTextTimer" to="." method="_on_ShowTextTimer_timeout"]
